repair jump text in article

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1182,50 +1182,56 @@ textarea {
 
 .articleBlock {
     background: linear-gradient(180deg, rgba(10, 20, 34, 0) 0%, rgba(10, 20, 34, 0.2) 56.25%, rgba(10, 20, 34, 0.8) 100%), url('../img/cartImg.jpg') center no-repeat;
+    background-size: cover;
     width: v(264);
     height: v(384);
     margin: 0 v(24) v(24) 0;
     border-radius: v(8);
     cursor: pointer;
-
     &:hover {
         border: 4px solid var(--btnYellowActive);
         background: linear-gradient(180deg, rgba(10, 20, 34, 0) 0%, rgba(10, 20, 34, 0.2) 56.25%, rgba(10, 20, 34, 0.8) 100%), url('../img/cartImg.jpg') center no-repeat;
         border-radius: v(8);
         box-sizing: border-box;
-        margin-bottom: v(17);
+        // margin-bottom: v(17);
 
         .articleEye {
-            visibility: hidden;
+            visibility: visible
         }
         .articleDesc{
             // column-width: v(215);
-            padding: 0 v(20);
+            padding: 0 v(20) v(16);
+            margin-top: v(172);
         }
         .articleFooter {
-            padding: 0 v(20);
+            padding: 0 v(20) v(24);
         }
     }
 }
 
 .articleEye {
-    padding: v(8) v(8) 0 0;
+    margin: v(8) v(8) 0 0;
     color: var(--mainWhite);
     display: flex;
     flex-direction: row-reverse;
-
+    visibility: hidden;
+    // width: v(24);
+    height: v(24);
 }
 
 .articleDesc {
+    display: flex;
+    align-items: flex-end;
     color: var(--mainWhite);
-    margin-top: v(216);
-    margin-bottom: v(16);
+    // margin-top: v(216);
+    padding: v(184) v(24) v(16);
+    height: v(96);
     font-size: v(20);
-    padding: 0 v(24);
+    // padding: 0 v(24);
     column-width: v(216);
     font-weight: normal;
     font-family: var(--textFontFamaly);
-
+    // border: var(--border);
 }
 
 .articleFooter {
